<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/res-auto">

    <item
        android:id="@+id/action_new_chat"
        android:title="@string/new_chat"
        android:icon="@drawable/ic_add"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_history"
        android:title="@string/history"
        android:icon="@drawable/ic_history"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"
        app:showAsAction="never" />

</menu>
